syntax = "proto3";

package buf_test;

import "google/api/annotations.proto";

option go_package = "/item";

message PingRequest {
  string field = 1;
}

message PingResponse {
  string field = 1;
}

message StreamingRequest {
  string field = 1;
}

message StreamingResponse {
  string field = 1;
}

message OneOfRequest {}

message ResponseOne {
  string field = 1;
}

message ResponseTwo {
  string field = 1;
}

message OneOfResponse {
  oneof response {
    ResponseOne response_one = 1;
    ResponseTwo response_two = 2;
  }
}

service PingService {
  rpc Ping(PingRequest) returns (PingResponse) {
      option (google.api.http) = {
        post: "/ping"
        body: "*"
      };
  };
  rpc OneOf(OneOfRequest) returns (OneOfResponse) {
      option (google.api.http) = {
        get: "/oneof"
      };
    }
  rpc Streaming(stream StreamingRequest) returns (stream StreamingResponse) {
      option (google.api.http) = {
        get: "/streaming"
      };
  };
}
